# agent

./: .env.example  .gitignore  GEMINI.md  INSTALLATION.md  README.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_5_COMPLETION_SUMMARY.md  TASK_6_COMPLETION_SUMMARY.md  TASK_6_QUICK_SUMMARY.md  TASK_6_VISUAL_SUMMARY.txt  TASK_7_WORKFLOW_EXECUTION_SUMMARY.md  TEST_STATUS_REPORT.md  start-dev-foreground.bat  start-dev.bat  start-dev.sh
server/: API_IMPLEMENTATION_SUMMARY.md  CONFIG_FIX_SUMMARY.md  MEM0_CONFIGURATION_SUMMARY.md  RAG_PIPELINE_IMPLEMENTATION_SUMMARY.md  README.md  TASK_12_IMPLEMENTATION_SUMMARY.md  pyproject.toml  run_tests.py
server/app/: main.py
server/app/api/: chat.py  config.py  files.py  memory.py  models.py  websocket.py
server/app/config/: __init__.py  loader.py  models.py
server/config/: agents.yaml  memory.yaml  workflows.yaml
server/scripts/: health_check.py  init_db.py
server/tests/: test_acceptance.py  test_agent_executor.py  test_agent_generator.py  test_agent_lifecycle.py  test_api_integration.py  test_base_nodes.py  test_chunker.py  test_complete_integration.py  test_config_validation.py  test_context_manager.py  test_conversation_manager.py  test_embeddings.py  test_error_handling.py  test_file_processor.py  test_health.py  test_memory_manager.py  test_monitoring.py  test_orchestrator.py  test_rag_pipeline.py  test_rag_pipeline_e2e.py  test_retention_policies.py  test_state_management.py  test_system_integration.py  test_task_6_verification.py  test_ui.py  test_vector_store.py  test_websocket.py  test_workflow_integration.py
(+98 files in other folders)
